--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
             <div class="col-md-6 mb-4">
                 <div class="card project-card h-100">
                     <div class="card-body">
-                        <h5 class="card-title">Blog CMS</h5>
+                        <h5 class="card-title">Content Management Tool</h5>
                         <p class="card-text">Built with React.js, HTML, CSS. Reduced content upload time by 30%.</p>
                         <div class="mb-3">
                             <span class="skill-badge">React.js</span>
                             <span class="skill-badge">CSS</span>
                         </div>
-                        <a href="https://github.com/ram-19/blog-cms" class="btn btn-primary">GitHub</a>
+                        <a href="https://github.com/ram-19/Bharat-Intern-Task-1.git" class="btn btn-primary">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                             <span class="skill-badge">React.js</span>
                             <span class="skill-badge">Bootstrap</span>
                         </div>
-                        <a href="https://github.com/ram-19/project-management-tool" class="btn btn-primary">GitHub</a>
+                        <a href="https://github.com/ram-19/Bharat-intern-Task-2.git" class="btn btn-primary">GitHub</a>
                     </div>
                 </div>
             </div>
