--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ram Prabhath | Front-End Developer</title>
+    <title>Sirimella Ram Prabhath | Front-End Developer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         :root {
@@ -11,7 +11,7 @@
             --secondary-color: #917FB3;
         }
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Times new roman', sans-serif;
             background: #FDE2F3;
         }
         .navbar { background: var(--primary-color) !important; }
