--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             --secondary-color: #917FB3;
         }
         body {
-            font-family: 'Times new roman', sans-serif;
+            font-family: 'Ariel', sans-serif;
             background: #FDE2F3;
         }
         .navbar { background: var(--primary-color) !important; }
